# pharos-mcp

./: .gitignore  .mcp.json  .mcpbignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  start_mcp.sh
.claude/: settings.local.json
.claude/skills/: commit.md  pack.md
.claude/skills/analyze-usage/: SKILL.md
.claude/skills/improve-mcp/: SKILL.md
.github/workflows/: ci.yml
config/: databases.yaml  phx.yaml  prompts.yaml  tools.yaml
schemas/phx/: INVQGD.XSD  INVQRY.XSD  INVTMA.XSD  INVTMADOC.XSD  INVTMB.XSD  INVTMBDOC.XSD  INVTMI.XSD  INVTMIDOC.XSD  INVTMN.XSD  INVTMNDOC.XSD  INVTMO.XSD  INVTMODOC.XSD  INVTMT.XSD  INVTMTDOC.XSD  PORQRQ.XSD  PORTRA.XSD  PORTRADOC.XSD  PORTRR.XSD  PORTRRDOC.XSD  README.md  WIPQRY.XSD  WIPQVA.XSD  WIPTJR.XSD  WIPTJRDOC.XSD  WIPTLP.XSD  WIPTLPDOC.XSD  WIPTMI.XSD  WIPTMIDOC.XSD
src/pharos_mcp/: __init__.py  config.py  server.py
src/pharos_mcp/core/: __init__.py  audit.py  database.py  dialect.py  phx_client.py  protocol_analyzer.py  protocol_logger.py  security.py
src/pharos_mcp/resources/: __init__.py  schema_resources.py
src/pharos_mcp/tools/: __init__.py  analytics.py  base.py  connection.py  financial.py  phx.py  query.py  schema.py  tempo_analytics.py  tempo_enrichment.py  tempo_mrp_debug.py  warehouse.py
src/pharos_mcp/tools/data/: __init__.py  domain_map.py  help_topics.py  lookups.py  modules.py  templates.py  tempo_domain_map.py  tempo_modules.py
src/pharos_mcp/tools/data/tempo_templates/: __init__.py  analytics.py  forecasting.py  inventory.py  mrp_core.py
src/pharos_mcp/tools/schema/: __init__.py  discovery.py  inspection.py  lookup.py  reference.py  tempo_reference.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/core/: test_audit.py  test_database.py  test_phx_client.py  test_security.py
tests/unit/tools/: test_phx.py
