# Pharos MCP - SYSPRO ERP Database Integration
# Enterprise-grade guardrails configuration

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "pharos-mcp"
version = "0.1.0"
description = "Model Context Protocol server for SYSPRO ERP database integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Phygital Tech", email = "dev@phygital.tech" }
]
keywords = ["mcp", "syspro", "erp", "database", "sql-server", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pymssql>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    # Linting & Formatting
    "ruff>=0.4.0",
    # Type checking
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12",
    # Pre-commit hooks
    "pre-commit>=3.7.0",
    # Security scanning
    "pip-audit>=2.7.0",
]

[project.scripts]
pharos-mcp = "pharos_mcp.server:main"

[project.urls]
Homepage = "https://github.com/phygital-tech/pharos-mcp"
Repository = "https://github.com/phygital-tech/pharos-mcp"
Documentation = "https://github.com/phygital-tech/pharos-mcp#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/pharos_mcp"]

# =============================================================================
# Ruff - Linting & Formatting (replaces black, flake8, isort, bandit)
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (needed for tests)
    "S608",   # SQL injection (we have QueryValidator)
    "B008",   # function call in default argument (FastMCP pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "ARG001", # unused arguments in fixtures
    "ARG002", # unused method arguments in test classes
]

[tool.ruff.lint.isort]
known-first-party = ["pharos_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Mypy - Type Checking
# =============================================================================

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "pymssql",
    "pymssql.*",
    "mcp",
    "mcp.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest - Testing
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: marks tests requiring database connection (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow running",
]
filterwarnings = [
    "ignore::DeprecationWarning:pymssql.*",
]

# =============================================================================
# Coverage - Test Coverage
# =============================================================================

[tool.coverage.run]
source = ["src/pharos_mcp"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true
